--- a/hough_edge/hough_edge/hough_edge.vcxproj
+++ b/hough_edge/hough_edge/hough_edge.vcxproj
@@ -143,7 +143,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="coin_detector.cpp" />
     <ClCompile Include="hough_edge.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="coin_detector.h" />
+    <ClInclude Include="coin_identifier.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
