--- a/hough_edge/hough_edge/hough_edge.vcxproj.filters
+++ b/hough_edge/hough_edge/hough_edge.vcxproj.filters
@@ -18,5 +18,16 @@
     <ClCompile Include="hough_edge.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="coin_detector.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="coin_detector.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="coin_identifier.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
