--- a/hough_edge/hough_edge/hough_edge.vcxproj
+++ b/hough_edge/hough_edge/hough_edge.vcxproj
@@ -144,6 +144,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="coin_detector.cpp" />
+    <ClCompile Include="coin_identifier.cpp" />
     <ClCompile Include="hough_edge.cpp" />
   </ItemGroup>
   <ItemGroup>
