--- a/hough_edge/hough_edge/hough_edge.vcxproj
+++ b/hough_edge/hough_edge/hough_edge.vcxproj
@@ -145,12 +145,15 @@
   <ItemGroup>
     <ClCompile Include="coin_detector.cpp" />
     <ClCompile Include="coin_identifier.cpp" />
+    <ClCompile Include="file_handler.cpp" />
     <ClCompile Include="hough_edge.cpp" />
     <ClCompile Include="image_stream.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="coin_detector.h" />
     <ClInclude Include="coin_identifier.h" />
+    <ClInclude Include="dirent.h" />
+    <ClInclude Include="file_handler.h" />
     <ClInclude Include="image_stream.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
