--- a/hough_edge/hough_edge/hough_edge.vcxproj.filters
+++ b/hough_edge/hough_edge/hough_edge.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="image_stream.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="file_handler.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="coin_detector.h">
@@ -36,6 +39,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="image_stream.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="dirent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="file_handler.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
