--- a/hough_edge/hough_edge/hough_edge.vcxproj.filters
+++ b/hough_edge/hough_edge/hough_edge.vcxproj.filters
@@ -47,5 +47,8 @@
     <ClInclude Include="file_handler.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="shift.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
