--- a/hough_edge/hough_edge/hough_edge.vcxproj.filters
+++ b/hough_edge/hough_edge/hough_edge.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClInclude Include="shift.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ssim.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
