--- a/hough_edge/hough_edge/hough_edge.vcxproj.filters
+++ b/hough_edge/hough_edge/hough_edge.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="file_handler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="image_processing.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="coin_detector.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="shift.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="image_processing.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
